--- a/app/src/main/res/layout/activity_part_details.xml
+++ b/app/src/main/res/layout/activity_part_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -8,9 +8,6 @@
     android:background="@color/colorPrimary"
     tools:context=".PartDetailsActivity">
 
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -21,7 +18,7 @@
             android:layout_height="wrap_content"
             android:background="@color/colorAccent"
             android:paddingStart="52dp"
-            android:paddingTop="27dp"
+            android:paddingTop="20dp"
             android:text="@string/part_details"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="35sp"
@@ -193,6 +190,16 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/model_detail" />
                 <TextView
+                    android:id="@+id/make_detailtxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="30dp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:text="model"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toEndOf="@id/make_detail"
+                    app:layout_constraintTop_toBottomOf="@id/model_detailtxt" />
+                <TextView
                     android:id="@+id/year_detail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -298,4 +305,3 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
