--- a/app/src/main/res/layout/activity_part_details.xml
+++ b/app/src/main/res/layout/activity_part_details.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:background="@color/colorAccent"
             android:paddingStart="52dp"
-            android:paddingTop="20dp"
+            android:paddingTop="15dp"
             android:text="@string/part_details"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="35sp"
@@ -43,6 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
+            android:textStyle="bold"
             android:text="name"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="30sp"
@@ -136,6 +137,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/details"
+            android:textStyle="bold"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -144,8 +146,8 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView_details"
-            android:layout_width="360dp"
-            android:layout_height="200dp"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:padding="10dp"
             app:cardCornerRadius="20dp"
@@ -173,11 +175,12 @@
                     android:id="@+id/model_detailtxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="30dp"
+                    android:layout_marginStart="150dp"
+                    android:layout_marginTop="30dp"
                     android:textColor="@color/colorPrimaryDark"
                     android:text="model"
                     android:textSize="18sp"
-                    app:layout_constraintStart_toEndOf="@id/model_detail"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
                 <TextView
                     android:id="@+id/make_detail"
@@ -193,11 +196,12 @@
                     android:id="@+id/make_detailtxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="30dp"
+                    android:layout_marginStart="150dp"
+                    android:layout_marginTop="30dp"
                     android:textColor="@color/colorPrimaryDark"
                     android:text="model"
                     android:textSize="18sp"
-                    app:layout_constraintStart_toEndOf="@id/make_detail"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/model_detailtxt" />
                 <TextView
                     android:id="@+id/year_detail"
@@ -210,18 +214,106 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/make_detail" />
                 <TextView
+                    android:id="@+id/year_detailtxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="150dp"
+                    android:layout_marginTop="30dp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:text="model"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/make_detailtxt" />
+                <TextView
                     android:id="@+id/category_detail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="60dp"
-                    android:layout_marginBottom="30dp"
-                    android:layout_marginEnd="30dp"
+                    android:layout_margin="30dp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:text="@string/category"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/year_detail" />
+
+                <TextView
+                    android:id="@+id/category_detailtxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="150dp"
                     android:layout_marginTop="30dp"
                     android:textColor="@color/colorPrimaryDark"
-                    android:text="@string/make"
+                    android:text="model"
                     android:textSize="18sp"
-                    app:layout_constraintStart_toEndOf="@id/model_detailtxt"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/year_detailtxt" />
+                <TextView
+                    android:id="@+id/subcategory_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="30dp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:text="@string/subcategory"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/category_detail" />
+                <TextView
+                    android:id="@+id/subcategory_detailtxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="150dp"
+                    android:layout_marginTop="30dp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:text="model"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/category_detailtxt" />
+                <TextView
+                    android:id="@+id/condition_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="30dp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:text="@string/condition"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/subcategory_detail" />
+                <TextView
+                    android:id="@+id/condition_detailtxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="150dp"
+                    android:layout_marginTop="30dp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:text="model"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/subcategory_detailtxt" />
+                <TextView
+                    android:id="@+id/negotiable_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="30dp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:text="@string/negotiable"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/condition_detail" />
+                <TextView
+                    android:id="@+id/negotiable_detailtxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="150dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:text="model"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/condition_detailtxt"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
@@ -233,6 +325,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
             android:text="@string/description"
+            android:textStyle="bold"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -278,6 +371,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
             android:text="@string/location_prof"
+            android:textStyle="bold"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
