--- a/app/src/main/res/layout/activity_part_details.xml
+++ b/app/src/main/res/layout/activity_part_details.xml
@@ -316,7 +316,6 @@
                     android:textColor="@color/colorPrimaryDark"
                     android:text="@string/negotiable"
                     android:textSize="18sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/condition_detail" />
                 <TextView
@@ -325,12 +324,35 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="180dp"
                     android:layout_marginTop="30dp"
-                    android:layout_marginBottom="30dp"
                     android:textColor="@color/colorPrimaryDark"
                     android:text="model"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/condition_detailtxt"
+                    app:layout_constraintTop_toBottomOf="@id/condition_detailtxt"/>
+                <TextView
+                    android:id="@+id/phone_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="30dp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:text="@string/phone"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/negotiable_detail" />
+
+                <TextView
+                    android:id="@+id/phone_detailtxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="180dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp"
+                    android:textColor="@color/themeColor"
+                    android:text="70 055678"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/negotiable_detailtxt"
                     app:layout_constraintBottom_toBottomOf="parent"/>
 
 
