--- a/app/src/main/res/layout/fragment_parts.xml
+++ b/app/src/main/res/layout/fragment_parts.xml
@@ -81,7 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/partsClearAll"
-                android:text="Clear all"
+                android:text="@string/clear_all"
                 android:textSize="15sp"
                 android:textColor="@color/primaryTextColor"
                 android:layout_marginTop="38dp"
@@ -107,7 +107,7 @@
                 android:id="@+id/partsMakeSpinner"
                 android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginStart="170dp"
-                style="@style/modifiedEditText"
+                android:backgroundTint="@color/themeColor"
                 app:layout_constraintStart_toEndOf="@id/partsMakeText"
                 app:layout_constraintTop_toBottomOf="@id/partsClearAll"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -131,7 +131,7 @@
                 android:id="@+id/partsModelSpinner"
                 android:layout_marginTop="23dp"
                 android:layout_marginStart="170dp"
-                style="@style/modifiedEditText"
+                android:backgroundTint="@color/themeColor"
                 app:layout_constraintStart_toEndOf="@id/partsModelText"
                 app:layout_constraintTop_toBottomOf="@id/partsMakeSpinner"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -155,7 +155,7 @@
                 android:id="@+id/partsYearSpinner"
                 android:layout_marginTop="23dp"
                 android:layout_marginStart="170dp"
-                style="@style/modifiedEditText"
+                android:backgroundTint="@color/themeColor"
                 app:layout_constraintStart_toEndOf="@id/partsYearText"
                 app:layout_constraintTop_toBottomOf="@id/partsModelSpinner"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -179,7 +179,7 @@
                 android:id="@+id/partsCategorySpinner"
                 android:layout_marginTop="23dp"
                 android:layout_marginStart="170dp"
-                style="@style/modifiedEditText"
+                android:backgroundTint="@color/themeColor"
                 app:layout_constraintStart_toEndOf="@id/partsCategoryText"
                 app:layout_constraintTop_toBottomOf="@id/partsYearSpinner"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -203,7 +203,7 @@
                 android:id="@+id/partsSubCategorySpinner"
                 android:layout_marginTop="23dp"
                 android:layout_marginStart="170dp"
-                style="@style/modifiedEditText"
+                android:backgroundTint="@color/themeColor"
                 app:layout_constraintStart_toEndOf="@id/partsSubCategoryText"
                 app:layout_constraintTop_toBottomOf="@id/partsCategorySpinner"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -227,7 +227,7 @@
                 android:id="@+id/partsConditionSpinner"
                 android:layout_marginTop="25dp"
                 android:layout_marginStart="170dp"
-                style="@style/modifiedEditText"
+                android:backgroundTint="@color/themeColor"
                 app:layout_constraintStart_toEndOf="@id/partsConditionText"
                 app:layout_constraintTop_toBottomOf="@id/partsSubCategorySpinner"
                 app:layout_constraintEnd_toEndOf="parent"
