--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -288,6 +288,7 @@
         android:layout_height="70dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="16dp"
+        android:elevation="8dp"
         android:background="@drawable/profile_bg"
         android:src="@drawable/edit_icon"
         app:layout_constraintBottom_toBottomOf="parent"
