--- a/app/src/main/res/layout/fragment_parts.xml
+++ b/app/src/main/res/layout/fragment_parts.xml
@@ -52,11 +52,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="10dp"
         android:backgroundTint="@color/colorPrimary"
         android:elevation="12dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:cardCornerRadius="26dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -308,7 +308,7 @@
                         android:layout_marginEnd="10dp"
                         android:layout_weight="1"
                         android:hint="@string/from"
-                        android:inputType="number" />
+                        android:inputType="numberDecimal" />
 
                     <EditText
                         android:id="@+id/partsPriceToEditText"
@@ -319,7 +319,7 @@
                         android:layout_marginEnd="@dimen/loginViewsMargin"
                         android:layout_weight="1"
                         android:hint="@string/to"
-                        android:inputType="number" />
+                        android:inputType="numberDecimal" />
                 </LinearLayout>
 
                 <androidx.appcompat.widget.AppCompatButton
